[package]
name = "image-hdr"
version = "0.3.0"
edition = "2021"
authors = ["Anshul Sanghi <contact@anshulsanghi.tech>"]
description = "An implementation of HDR Radiance Estimation using Poisson Photon Noise Estimator for creating HDR image from a set of images"
homepage = "https://github.com/anshap1719/image-hdr"
repository = "https://github.com/anshap1719/image-hdr"
keywords = ["image", "hdr", "merge"]
categories = ["multimedia"]
license = "Apache-2.0"
readme = "./README.md"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
image = "0.24"
rayon = "1.7"
kamadak-exif = "0.5.5"
rawloader = "0.37"
imagepipe = "0.5"
thiserror = "1.0.47"
num-traits = "0.2.16"
