[package]
name = "image-hdr"
version = "0.4.0"
edition = "2021"
authors = ["Anshul Sanghi <contact@anshulsanghi.tech>"]
description = "An implementation of HDR Radiance Estimation using Poisson Photon Noise Estimator for creating HDR image from a set of images"
homepage = "https://github.com/anshap1719/image-hdr"
repository = "https://github.com/anshap1719/image-hdr"
keywords = ["image", "hdr", "merge"]
categories = ["multimedia"]
license = "Apache-2.0"
readme = "./README.md"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
image = "0.25.0"
rayon = "1.10"
kamadak-exif = "0.5.5"
rawloader = { version = "0.37", optional = true }
imagepipe = { version = "0.5", optional = true }
thiserror = "1.0.58"
ndarray = { version = "0.15.6", features = ["rayon"] }

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
image = { version = "0.25.0", features = ["jpeg"] }

[features]
default = ["read-raw-image"]
read-raw-image = ["dep:imagepipe", "dep:rawloader"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
