[package]
name = "image-hdr"
version = "0.5.1"
edition = "2021"
authors = ["Anshul Sanghi <contact@anshulsanghi.tech>"]
description = "An implementation of HDR Radiance Estimation using Poisson Photon Noise Estimator for creating HDR image from a set of images"
homepage = "https://github.com/anshap1719/image-hdr"
repository = "https://github.com/anshap1719/image-hdr"
keywords = ["image", "hdr", "merge"]
categories = ["multimedia"]
license = "Apache-2.0"
readme = "./README.md"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
image = "0.25.2"
rayon = "1.10"
kamadak-exif = "0.5.5"
rawloader = { version = "0.37", optional = true }
imagepipe = { version = "0.5", optional = true }
thiserror = "1.0.63"
ndarray = { version = "0.16.1", features = ["rayon"] }

[dev-dependencies]
reqwest = { version = "0.12.7", features = ["blocking"] }
image = { version = "0.25.2", features = ["jpeg"] }

[features]
default = ["read-raw-image"]
read-raw-image = ["dep:imagepipe", "dep:rawloader"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
# Clippy lint groups
correctness = { level = "deny", priority = 0 }
suspicious = { level = "deny", priority = 0 }
complexity = { level = "deny", priority = 0 }
perf = { level = "deny", priority = 0 }
style = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 0 }
cargo = { level = "deny", priority = 0 }

# Overrides
too_many_lines = { level = "deny", priority = 1 }
unwrap_used = { level = "deny", priority = 1 }
get_unwrap = { level = "deny", priority = 1 }
fallible_impl_from = { level = "deny", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
